# DevelopmentTeam

./: CMakeLists.txt  README.md  main.cpp
Issue/: Issue.cpp  Issue.h
Member/: Member.cpp  Member.h
MemberWindow/: MemberWindow.cpp  MemberWindow.h
Observer/: Observer.h
Repository/: Repository.cpp  Repository.h
Service/: Service.cpp  Service.h
TableModel/: TableModel.cpp  TableModel.h
